Increase footer width if toc is not visible, fixes #205 (#206)
* Increase footer width if toc is not visible

* Fix left margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -594,6 +594,11 @@ table td {
   .list-posts .post-date {
     color: gray;
   }
+
+  .footer {
+    margin-left: 0;
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 820px) {
